--- a/tantangan.html
+++ b/tantangan.html
@@ -59,7 +59,7 @@
     >
       <h1 class="fw-bolder display-1 mb-3">Emely Simanjuntak</h1>
       <h6 class="fs-3 text-secondary text-capitalize mb-4">
-        I'm a front-end Enthusiast
+        I'm a frontend Enthusiast
       </h6>
       <a href="#" class="btn btn-primary rounded-pill">About Me</a>
     </section>
